Colab을 통해 생성됨

--- a/일만백만_1차_Gemini_테스트.ipynb
+++ b/일만백만_1차_Gemini_테스트.ipynb
@@ -4,8 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "mount_file_id": "1gJ2cIqgqhC1dYdUuUmsI_lx244ck5HpG",
-      "authorship_tag": "ABX9TyNpi69yN43Gz9MX/HTi+iob",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +36,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "R7p9MflJ-8jL",
-        "outputId": "76e5d1b1-95b7-46e4-d5e0-c1d0335884f2"
+        "outputId": "a1e2ac9a-970b-4c9c-a82a-efc32248cb1e"
       },
       "execution_count": 1,
       "outputs": [
@@ -46,7 +44,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -63,7 +61,7 @@
         "id": "XR3PxrcsABwi",
         "outputId": "450fd425-88b1-4e2b-de90-c866e5ca8d21"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,7 +132,7 @@
         "id": "GUZ9BzSxAKvz",
         "outputId": "0bc82e74-054a-482f-a130-16da44b213c0"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,7 +160,7 @@
         "id": "aTEZpW05AEz9",
         "outputId": "b590b806-eb33-4829-e299-7f1ef240d78f"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -191,7 +189,7 @@
       "metadata": {
         "id": "L7a29OXd_2C1"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -202,7 +200,7 @@
       "metadata": {
         "id": "Zy64TZyRkftq"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -214,7 +212,7 @@
       "metadata": {
         "id": "AxJnR_hykqk6"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -232,7 +230,7 @@
       "metadata": {
         "id": "XWpd5Qgq_iPB"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -264,7 +262,7 @@
       "metadata": {
         "id": "Vn4a6beKAw7C"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -277,7 +275,7 @@
       "metadata": {
         "id": "tWIpBsZKBZxm"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -300,7 +298,7 @@
         "id": "WpXMLEfHAz5M",
         "outputId": "e871132a-22fe-46f6-de13-97f916cf48f6"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
